--- a/assets/footer.css
+++ b/assets/footer.css
@@ -13,12 +13,13 @@
 }
 
 .footer {
-
     height: max-content;
     padding: 50px 0px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .links_1,.links_2 {
@@ -29,6 +30,13 @@
 
 .footer_page_link {
     color: white;
+    transform: scale(1);
+    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
+}
+
+.footer_page_link:hover {
+    transform: scale(1.1);
+    color: rgba(255, 255, 255, 0.671);
 }
 
 .social_links_container {
@@ -37,8 +45,20 @@
     gap: 10px;
 }
 
+.footer_social_link {
+    transform: scale(1);
+    filter: invert(89%) sepia(18%) saturate(126%) hue-rotate(176deg) brightness(89%) contrast(88%);
+    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
+    opacity: 1;
+}
+
+.footer_social_link:hover {
+    transform: scale(1.1);
+    opacity: 0.8;
+}
+
 .logo_image {
-    filter: invert(99%) sepia(4%) saturate(3%) hue-rotate(327deg) brightness(102%) contrast(100%);
+    filter: invert(99%) sepia(18%) saturate(2%) hue-rotate(176deg) brightness(100%) contrast(88%);
     width: auto;
     height: 200px;
 }
@@ -51,5 +71,55 @@
     justify-content: center;
     align-items: center;
     color: white;
+}
+
+
+/* responsiveness */
+
+
+
+@media (max-width: 675px) {
+    .footer_wrapper {
+        position: relative;
+    }
+
+    .footer {
+        gap: 20px;
+    }
+    .links_1 {
+        order: 3;
+        width: 100%;
+    }
+    .links_2 {
+        order: 1;
+        width: 100%;
+    }
+
+    .logo_image_container {
+        position: absolute;
+        top: 30px;
+        left: 0px;
+    }
+
+    .logo_image {
+        height: 200px;
+    }
+}
+
+@media (max-width: 450px) {
+
+    .footer {
+        font-size: 14px;
+    }
+
+    .logo_image_container {
+        position: absolute;
+        top: 30px;
+        left: -50px;
+    }
+
+    .logo_image {
+        height: 180px;
+    }
 }
 
