--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -16,9 +16,11 @@
           <div class="product-card">
             <div class="product-image"><img width="100%" height="100%" src="{{ product.featured_image |  image_url }}" alt="" loading="lazy"></div>
             <div class="product-information">
-              <p class="product-title">
-                {{ product.title | truncatewords: 10 }}
-              </p>
+              <a href="{{ product.url }}">
+                <p class="product-title">
+                  {{ product.title | truncatewords: 10 }}
+                </p>
+              </a>
 
               <div class="product-prices">
                 <p class="product-price">{{ product.price |  money }}</p>
