--- a/assets/coffe-banner.css
+++ b/assets/coffe-banner.css
@@ -5,7 +5,7 @@
   /* margin: 70px 0; */
   padding: 100px 0;
   width: 100%;
-  background-image: url("./coffe-banner-bg-image.png");
+  background-image: url("./reqtangle.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
