--- a/sections/coffe-banner.liquid
+++ b/sections/coffe-banner.liquid
@@ -1,6 +1,11 @@
 {{ 'coffe-banner.css' | asset_url | stylesheet_tag }}
 
 <section class="coffee-section">
+  <div class="background-container-coffee">
+    <img width="100%" height="100%" src="{{ 'rectangle.svg' |  asset_url }}" alt="">
+  </div>
+
+  
   <div class="coffee-container">
     <div class="content">
       <div class="box">
@@ -16,10 +21,9 @@
         <p>{{ section.settings.text_3 }}</p>
       </div>
     </div>
-
     <div class="image-container">
       {% if section.settings.image != blank %}
-        <img src="{{ section.settings.image | image_url: width: 500 }}" alt="كوب القهوة" class="coffee-image" loading="lazy">
+        <img src="{{ section.settings.image | image_url: height: 500 }}" alt="كوب القهوة" class="coffee-image" loading="lazy">
       {% endif %}
     </div>
   </div>
