--- a/sections/coffe-banner.liquid
+++ b/sections/coffe-banner.liquid
@@ -2,7 +2,7 @@
 
 <section class="coffee-section">
   <div class="background-container-coffee">
-    <img width="100%" height="100%" src="{{ 'rectangle.svg' |  asset_url }}" alt="">
+    <img width="100%" height="100%" src="{{ 'rectangle.svg' |  asset_url }}" alt="" loading="lazy">
   </div>
 
   
