--- a/assets/coffe-banner.css
+++ b/assets/coffe-banner.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: max-content;
+  height: 400px;
   padding: 40px 0px;
 }
 
