--- a/assets/custom-contact-form.css
+++ b/assets/custom-contact-form.css
@@ -92,7 +92,12 @@ input:focus-visible {
 }
 
 .form-button button:hover {
-  background-color: #0c4b4d;
+  background-color: white;
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition-duration: 300ms;
+  scale: 0.95;
+  color: #0a3d3f;
+  border: 2px solid #0a3d3f;
 }
 
 .form-status {
