--- a/assets/images-slider.css
+++ b/assets/images-slider.css
@@ -12,6 +12,9 @@
   text-align: center;
   color: white;
 }
+.swiper-wrapper {
+  transition-timing-function: linear !important;
+}
 
 .image-slider-container {
   width: 100%;
@@ -53,9 +56,10 @@
   font-size: 16px;
   font-weight: bold;
   text-decoration: none;
-  transition: all 0.5s ease;
+  transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
   text-align: center;
   cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .how-to-button {
@@ -67,13 +71,19 @@
 .see-all-button {
   color: white;
   border: 2px solid white;
+  background-color: transparent;
 }
-.see-all-button:hover {
-  color: white !important;
-  transform: translateY(-5px);
-}
+
 .how-to-button:hover {
-  transform: translateY(-5px);
+  transform: scale(0.95);
+  background-color: #f7995f;
+  color: white !important;
+}
+
+.see-all-button:hover {
+  transform: scale(0.95);
+  background-color: #1eb5c7;
+  color: #083135 !important;
 }
 
 /* Responsive styles */
@@ -85,8 +95,14 @@
     /* margin: 0 -5% !important; */
   }
 
+  .image-item {
+    height: 40dvh;
+    border-radius: 15px;
+  }
+
   .image-item img {
-    width: 100%;
+    width: 99%;
+    border-radius: 15px;
   }
 
   .swiper-slide-prev,
