--- a/assets/main_collection_banner.css
+++ b/assets/main_collection_banner.css
@@ -2,21 +2,65 @@
     width: 100%;
     height: max-content;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0px;
+}
+
+.collection-page-banner {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
 .swiper {
-    width: 100%;
-    height: 500px;
+    width: 75%;
+    border-radius: 20px;
+    height: max-content;
 }
 
 
 .swiper-wrapper {
-    width: 80%;
-    height: 500px;
+    height: 300px;
 }
 
 .swiper-slide {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+}
+
+.swiper-slide img {
+    object-fit: cover;
+    object-position: center;
+}
+
+.swiper-button-next {
+    margin-left: 20px;
+    color: rgb(0, 0, 0);
+    text-shadow: rgb(255, 255, 255) 0px 0px 7px;
+}
+
+.swiper-button-prev {
+    margin-right: 20px;
+    color: rgb(0, 0, 0);
+    text-shadow: rgb(255, 255, 255) 0px 0px 7px;
+}
+
+.swiper-pagination span.swiper-pagination-bullet {
+    background-color: black;
+    width: 10px;
+    height: 10px;
+    opacity: 1;
+}
+
+.swiper-pagination span.swiper-pagination-bullet-active {
+    background-color: white;
+    width: 10px;
+    height: 10px;
 }
